--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tea House </title>
+        <title>Hoocky Tournament </title>
         <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="./style.css">
@@ -11,7 +11,49 @@
         <!-- font awesome -->
         <script src="https://kit.fontawesome.com/1dc60383b4.js" crossorigin="anonymous"></script>
     </head>
-<body>
-    <h1 class="bg-red-950">hello World!!</h1>
+<body class="font-manrope">
+   <header class="container mx-auto">
+    <!-- nav starts -->
+    <nav>
+        <div class="navbar bg-base-100">
+            <div class="navbar-start">
+              <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                </div>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-bold">
+                  <li><a class="text-primary">Home</a></li>
+                  <li>
+                    <a>About</a>
+                  </li>
+                  <li><a>Pages</a></li>
+                  <li><a>Blog</a></li>
+                  <li><a>Contact</a></li>
+                </ul>
+              </div>
+              <a class="btn btn-ghost text-4xl font-extrabold">Hockey 
+                <span class="text-primary">’</span>s</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1 font-bold">
+                <li><a class="text-primary">Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Pages</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <div class="navbar-end">
+              <img class="h-4 mr-4 hidden md:block" src="./Images/search.png" alt="">
+              <a class="btn bg-primary">Get Ticket</a>
+            </div>
+          </div>
+    </nav>
+    <!-- nav ends -->
+    <!-- carousel starts -->
+    <!-- carousel ends -->
+   </header>
+   <main class="container mx-auto"></main>
+   <footer></footer>
 </body>
 </html>
