--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body class="font-manrope">
    <header class="container mx-auto">
     <!-- nav starts -->
-    <nav>
-        <div class="navbar bg-base-100">
+    <nav class="mb-20">
+        <div class="navbar bg-base-100 ">
             <div class="navbar-start">
               <div class="dropdown">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -31,7 +31,7 @@
                   <li><a>Contact</a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost text-4xl font-extrabold">Hockey 
+              <a class=" text-4xl font-extrabold">Hockey 
                 <span class="text-primary">’</span>s</a>
             </div>
             <div class="navbar-center hidden lg:flex">
@@ -45,15 +45,66 @@
             </div>
             <div class="navbar-end">
               <img class="h-4 mr-4 hidden md:block" src="./Images/search.png" alt="">
-              <a class="btn bg-primary">Get Ticket</a>
+              <a class="btn bg-primary text-white text-xl font-bold">Get Ticket</a>
             </div>
           </div>
     </nav>
     <!-- nav ends -->
-    <!-- carousel starts -->
+    <!-- banner starts -->
+   <div class="">
+    <!-- carousel strats -->
+    <div class="carousel w-full ">
+      <div id="slide1" class="carousel-item bg-center  bg-no-repeat bg-cover h-[80vh] relative  w-full  bg-[url('./Images/1.png')]">
+        <!-- <img src="./Images/1.png" class="w-full" /> -->
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide4" class="btn btn-circle">❮</a> 
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+       
+      </div> 
+      <div id="slide2" class="carousel-item bg-center  bg-no-repeat bg-cover h-[80vh] relative w-full bg-[url('./Images/2.png')]">
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide1" class="btn btn-circle">❮</a> 
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <div id="slide3" class="carousel-item bg-center bg-no-repeat bg-cover h-[80vh] relative w-full bg-[url('./Images/3.png')]">
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide2" class="btn btn-circle">❮</a> 
+          <a href="#slide4" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <div id="slide4" class="carousel-item bg-center bg-no-repeat bg-cover h-[80vh] relative w-full bg-[url('./Images/4.png')]">
+        <!-- <img src="https://daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.jpg" class="w-full" /> -->
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide3" class="btn btn-circle">❮</a> 
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <div class=" bg-red-800 h-28 w-2/6 rounded-xl px-3 py-2 ">
+        <h4 class="text-2xl">Meet all the heroes from the field</h4>
+        <p>All the heroes are iconic. they have showed their skill
+          and perform their responsibilties. Bigger show bigger match!
+        </p>
+      </div>
+    </div>
     <!-- carousel ends -->
+    <!-- badge starts -->
+   <div class="flex justify-center">
+    <div class=" bg-black text-white w-full mt-4  lg:-translate-y-44 lg:translate-x-44 h-[50vh] lg:h-[20vh] lg:w-[28rem] rounded-xl px-5 py-20 lg:py-4  px">
+      <h4 class="text-2xl font-extrabold">Meet all the heroes from the field</h4>
+      <p class="mt-2 text-sm">All the heroes are iconic. they have showed their skill
+        and perform their responsibilties. Bigger show bigger match!
+      </p>
+    </div>
+   </div>
+    <!-- badge ends -->
+   </div>
+   <!-- banner Ends -->
    </header>
-   <main class="container mx-auto"></main>
+   <main class="container mx-auto my-28">
+   
+   </main>
    <footer></footer>
 </body>
 </html>
