client Question Section created

--- a/index.html
+++ b/index.html
@@ -444,6 +444,89 @@
     </section>
     <!-- section item container ends -->
    <!-- new Product Section Ends -->
+   <!-- client Question Section -->
+   <section>
+    <div class="border-t border-dotted border-x-gray-500 w-full my-12"></div>
+      <!--section Text Starts  -->
+      <div class="space-y-4 my-4">
+        <h2 class=" text-2xl lg:text-4xl font-extrabold text-center">Clients Question</h2>
+        <p class="lg:w-3/4 mx-auto text-center">Good News!! Good News!!
+          recently We have Launched A huge amount of Collection, Which Quality are very good, sustinable and luurious to use.It creates a ne Addition
+          of values to ur brand.
+        </p>
+      </div>
+      <div class="border-t border-dotted border-x-gray-500 w-full my-12"></div>
+      <!-- section Text Ends -->
+      <!-- Accordion Container Starts -->
+       <div class=" flex flex-1 flex-col lg:flex-row border border-gray-300 px-8 py-8 rounded-xl gap-7">
+        <div class="">
+          <img class="w-full" src="./Images/11.png" alt="">
+        </div>
+        <div class="accordion-container flex-1">
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-xl font-medium">
+              Our Equipment
+            </div>
+            <div class="collapse-content"> 
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque porro, recusandae pariatur nihil veritatis doloremque aperiam itaque optio quasi odio.</p>
+            </div>
+            <div class="border-t border-dotted border-x-gray-500 w-full my-1"></div>
+          </div>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Hockey Training
+            </div>
+            <div class="collapse-content"> 
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel repellendus mollitia ut quo, beatae id inventore ea. Eligendi, quod id!</p>
+            </div>
+            <div class="border-t border-dotted border-x-gray-500 w-full my-1"></div>
+          </div>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+             Private Lessons
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+            <div class="border-t border-dotted border-x-gray-500 w-full my-1"></div>
+          </div>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+             Skill Touring
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+            <div class="border-t border-dotted border-x-gray-500 w-full my-1"></div>
+          </div>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+             Booking
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+            <div class="border-t border-dotted border-x-gray-500 w-full my-1"></div>
+          </div>
+          <div class="collapse collapse-plus ">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+             Pricing
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+            <div class="border-t border-dotted border-x-gray-500 w-full my-1"></div>
+          </div>
+        </div>
+       </div>
+      <!-- Accordion Container Ends -->
+   </section>
    </main>
    <footer>
     
