footer section created

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         </div>
         <!-- Phone container Ends -->
         <!-- Email Container Starts -->
-        <div class="bg-[#8dc3f0] px-10 py-10 rounded-xl">
+        <div class="bg-[#dfc6a2] px-10 py-10 rounded-xl">
           <img class="w-[32px] mb-3" src="./Images/Group 1171275318.png" alt="">
          <span class="text-[#13131866] text-base">Email : </span> 
          <br> 
@@ -561,7 +561,7 @@
         </div>
         <!-- Email Container Ends -->
         <!-- Location Container Starts -->
-        <div class="bg-[#8dc3f0] px-10 py-10 rounded-xl">
+        <div class="bg-[#aed0e9] px-10 py-10 rounded-xl">
           <img class="w-[32px] mb-3" src="./Images/Group 1171275321.png" alt="">
          <span class="text-[#13131866] text-base">Location :</span> 
          <br> 
@@ -599,7 +599,7 @@
            <!-- c3 starts -->
             <div class="my-3 mx-6">
               <h4 class="text-xl font-bold mb-3">Message:</h4>
-              <textarea class="w-full border border-gray-300 rounded-xl" rows="8" cols="50" placeholder="Write your message here..."></textarea>
+              <textarea class="w-full border border-gray-300 rounded-xl" rows="11" cols="50" placeholder="Write your message here..."></textarea>
                 </textarea>
             </div>
             <button class="btn bg-primary px-auto py-3 w-full flex flex-col lg:absolute lg:bottom-0 text-white ">Send Message</button>
@@ -608,10 +608,72 @@
       </div>
       
     </section>
-  
+     <!-- social media section  starts-->
+     <section class="my-10">
+      <div class="bg-[#13131805] flex gap-4 flex-col justify-center items-center h-48">
+        <h4 class=" text-lg lg:text-2xl font-extrabold">Social Media</h4>
+        <div class="flex gap-6 lg:gap-10">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+      </div>
+     </section>
+     <!-- social media section ends -->
    </main>
-   <footer>
-    
-   </footer>
+    <footer class="bg-black text-white px-12 py-20 flex justify-center items-center flex-col lg:flex-row gap-20 lg:gap-32 ">
+      <!-- div 1 start -->
+     <div>
+      <div class="space-y-2 text-center lg:text-start">
+        <h2 class="text-2xl font-extrabold">Get In Touch</h2>
+        <p class="text-sm font-medium w-96">To Get in Touch You must be Add an maximum time To ensure
+         your time, and 24/7 hour service, get Setvice be Connected
+        </p>
+         <p class="py-5">
+          <i class="fa-regular fa-envelope text-lg text-primary mr-3 "></i>
+          <span>hockeys@support.com</span>
+         </p>
+         <p>
+          <i class="fa-solid fa-phone text-lg text-primary mr-3"></i>
+          <span class="text-base font-medium">(+62) 123-321-543</span>
+         </p>
+       </div>
+     </div>
+     <!-- div 1 ends -->
+     <!-- div 2 strs -->
+     <div class="flex justify-between gap-32">
+       <div>
+        <h4 class="text-lg pb-6 font-bold text-center lg:text-start">Company</h4>
+        <div class="space-y-2 text-center lg:text-start">
+          <p><a class="text-sm"> About Us</a></p>
+          <p><a class="text-sm">Leadership</a></p>
+          <p><a class="text-sm"> Careers</a></p>
+          <p><a class="text-sm">News And Article</a></p>
+          <p><a class="text-sm">Legal Notice</a></p>
+        </div>
+       </div>
+       <div>
+        <h4 class="text-lg pb-6 font-bold text-center lg:text-start">Support</h4>
+        <div class="space-y-2 text-center lg:text-start">
+          <p><a class="text-sm">Help Center</a></p>
+          <p><a class="text-sm">FAQ</a></p>
+          <p><a class="text-sm">Ticket Support</a></p>
+          <p><a class="text-sm">Contact US</a></p>
+        </div>
+       </div>
+     </div>
+     <div>
+      <h4 class="text-lg pb-6 font-bold text-center lg:text-start">Services</h4>
+      <div class="space-y-2 text-center lg:text-start">
+        <p><a class="text-sm">Academy</a></p>
+        <p><a class="text-sm">Group Lesson</a></p>
+        <p><a class="text-sm">Private Lesson</a></p>
+        <p><a class="text-sm">Hockeys For Kids</a></p>
+        <p><a class="text-sm">Hockeys For Adult</a></p>
+      </div>
+     </div>
+     <!-- div 4 ends -->
+    </footer>
 </body>
 </html>
