--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
         <div class="flex justify-between mx-6 ">
           <div>
             <h4 class="text-xl font-bold mb-3">Subject:</h4>
-            <input class="bg-[#13131805] px-5 py-4" type="text" name="" id="" placeholder="Enter Your Full Name">
+            <input class="bg-[#13131805] px-5 py-4" type="text" name="" id="" placeholder="Enter Your Subject">
           </div>
           <div>
             <h4 class="text-xl font-bold mb-3">Phone Number:</h4>
