correct in placeholde

--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
           </div>
           <div>
             <h4 class="text-xl font-bold mb-3">Phone Number:</h4>
-            <input class="bg-[#13131805] px-5 py-4" type="email" name="" id="" placeholder="Enter Your Email">
+            <input class="bg-[#13131805] px-5 py-4" type="email" name="" id="" placeholder="Enter Phone Nmber">
           </div>
           </div>
            <!-- container 2 Ends -->
